# google_adk_demo

./: README.md  main.py  pyproject.toml
agents/math_orchestrator/: __init__.py  agent.py
agents/ocr_transcriber/: agent.py
agents/reasoning_tool_orchestrator/: __init__.py  agent.py
google_adk_test/: __init__.py  registry.py  settings.py  tools.py
google_adk_test/agents/: __init__.py  math.py  ocr.py  orchestrator.py  poetry.py  synthesizer.py  tool_wrappers.py
notebooks/: test.ipynb
project_specs/: initial_requirements.md
